# ChangeLog for x11-base/xfree
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/x11-base/cvs-repo/gentoo-x86/x11-base/xfree/Attic/ChangeLog,v 1.288 2004/02/18 19:25:20 spyderous Exp $

  18 Feb 2004; Donnie Berkholz <spyderous@gentoo.org>; xfree-4.2.1-r3.ebuild,
  xfree-4.3.0-r4.ebuild:
  Pulling vulnerable versions.

  17 Feb 2004; Donnie Berkholz <spyderous@gentoo.org>; xfree-4.2.1-r3.ebuild,
  xfree-4.2.1-r4.ebuild, xfree-4.3.0-r4.ebuild, xfree-4.3.0-r5.ebuild,
  xfree-4.3.99.902-r2.ebuild:
  Updating comment about tahoma font requiring a Windows license to actually
  mention the word Tahoma.

  17 Feb 2004; Andrew Bevitt <cyfred@gentoo.org>; xfree-4.3.99.902-r1.ebuild:
  Pulling last vunerable version of 4.3.99.902

*xfree-4.3.99.902-r2 (17 Feb 2004)

  17 Feb 2004; Andrew Bevitt <cyfred@gentoo.org>; xfree-4.3.99.902-r2.ebuild:
  Buffer over flow fix for 4.3.99.902 see the below log entry.

*xfree-4.2.1-r4 (14 Feb 2004)

  14 Feb 2004; Seemant Kulleen <seemant@gentoo.org> xfree-4.2.1-r4.ebuild,
  xfree-4.3.0-r5.ebuild:
  Buffer overflow fix for 4.3.0 and 4.2.1. See:
  http://www.securityfocus.com/archive/1/353692/2004-02-10/2004-02-16/0 Font
  Information File Buffer Overflow *PART 2* Thanks to everyone who tested
  this.

  10 Feb 2004; Donnie Berkholz <spyderous@gentoo.org>; :
  The buffer overflow prompting the last version bump was CAN-2004-0083.

  10 Feb 2004; Donnie Berkholz <spyderous@gentoo.org>; xfree-4.3.0-r3.ebuild:
  Pulling last vulnerable version.

  09 Feb 2004; Aron Griffis <agriffis@gentoo.org> xfree-4.3.0-r4.ebuild:
  stable on alpha

  09 Feb 2004; Donnie Berkholz <spyderous@gentoo.org>; xfree-4.2.1-r2.ebuild,
  xfree-4.3.0-r2.ebuild, xfree-4.3.99.902.ebuild:
  Pulling vulnerable versions.

  09 Feb 2004; Donnie Berkholz <spyderous@gentoo.org>; :
  Fix ChangeLog entries.

  09 Feb 2004; Donnie Berkholz <spyderous@gentoo.org>; xfree-4.3.0-r4.ebuild: